# mitiflow

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.yml  justfile
.config/: nextest.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/agents/: architect.agent.md
.github/workflows/: ci.yml  container.yml
docs/: 00_proposal.md  01_zenoh_capabilities.md  02_architecture.md  03_durability.md  04_comparison.md  04_ordering.md  04_sequencing_and_replay.md  05_kafka_compatibility.md  05_replication.md  06_comparison.md  06_implementation_plan.md  07_kafka_compatibility.md  08_replay_ordering.md  09_cache_recovery_design.md  10_graceful_termination.md  11_benchmark_report.md  11_consumer_group_commits.md  12_consumer_group_e2e_tests.md  13_distributed_storage.md  14_emulator.md  15_key_based_publishing.md  16_dx_and_multi_topic.md  17_slow_consumer_offload.md  18_topic_schema_registry.md  19_key_scoped_subscribing.md  19_replay_api.md  20_error_handling.md  ROADMAP.md  TODO.md  configuration.md  deployment.md  getting_started.md  implementation_plan.md  improvement_note.md  index.md
mitiflow/: Cargo.toml  README.md
mitiflow-agent/: Cargo.toml  README.md
mitiflow-agent/src/: agent.rs  config.rs  error.rs  lib.rs  main.rs  membership.rs  reconciler.rs  recovery.rs  status.rs  topic_supervisor.rs  topic_watcher.rs  topic_worker.rs  types.rs
mitiflow-agent/tests/: agent.rs  membership.rs  multi_topic.rs  reconciler.rs  recovery.rs  reporters.rs  topic_supervisor.rs  topic_watcher.rs  topic_worker.rs  yaml_config.rs
mitiflow-agent/tests/e2e/: helpers.rs  mod.rs  scenarios.rs
mitiflow-agent/tests/smoke/: helpers.rs  mod.rs  scenarios.rs
mitiflow-bench/: Cargo.toml  docker-compose.yml  run_all.sh
mitiflow-bench/results/: durable_kafka_256b.csv  durable_mitiflow_256b.csv  durable_nats_256b.csv  durable_redis_256b.csv  durable_redpanda_256b.csv  durable_zenoh_256b.csv  pubsub_kafka_256b.csv  pubsub_mitiflow_256b.csv  pubsub_nats_256b.csv  pubsub_redis_256b.csv  pubsub_redpanda_256b.csv  pubsub_zenoh-advanced_256b.csv  pubsub_zenoh_256b.csv
mitiflow-bench/src/: lib.rs
mitiflow-bench/src/transport/: kafka.rs  mitiflow.rs  mitiflow_transport.rs  mod.rs  nats.rs  redis_stream.rs  zenoh_advanced.rs  zenoh_raw.rs
mitiflow-cli/: Cargo.toml  README.md
mitiflow-cli/src/: main.rs
mitiflow-emulator/: Cargo.toml  DESIGN.md  justfile
mitiflow-emulator/src/: backend.rs  chaos.rs  config.rs  container_backend.rs  error.rs  generator.rs  invariant_checker.rs  lib.rs  log_aggregator.rs  main.rs  metrics.rs  network_fault.rs  process_backend.rs  restart_channel.rs  role_config.rs  serde_helpers.rs  supervisor.rs  validation.rs
mitiflow-emulator/tests/: compile_exports.rs  config.rs  cross_process_determinism.rs  generator.rs  process_backend.rs  replayer_chaos_e2e.rs  scenario_network_partition.rs  scenario_rapid_restart.rs  scenario_slow_network.rs  scenario_storage_kill.rs  topology_examples.rs  validation.rs
mitiflow-emulator/topologies/: 01_minimal.yaml  02_durable.yaml  03_fanout.yaml  04_multi_stage.yaml  05_stress.yaml  06_chaos.yaml  07_slow_consumer.yaml  08_slow_consumer_with_store.yaml  09_multi_shard_offload.yaml  10_multi_topic_agent.yaml  11_chaos_storage_kill.yaml  12_chaos_network_partition.yaml  13_chaos_rapid_restart.yaml  14_chaos_slow_network.yaml  15_chaos_random.yaml
mitiflow-gateway/: Cargo.toml
mitiflow-gateway/src/: main.rs
mitiflow-orchestrator/: Cargo.toml  README.md
mitiflow-orchestrator/src/: alert_manager.rs  cluster_view.rs  config.rs  drain.rs  http.rs  lag.rs  lib.rs  lifecycle.rs  main.rs  orchestrator.rs  override_manager.rs  topic_manager.rs
mitiflow-orchestrator/src/http/: cluster.rs  consumer_groups.rs  events.rs  mod.rs  sse.rs  topics.rs  types.rs
mitiflow-orchestrator/tests/: e2e_http.rs  e2e_orchestrator.rs  e2e_state_sync.rs  http_api.rs  orchestrator.rs  schema_registry_fix.rs
mitiflow-storage/: Cargo.toml  README.md
mitiflow-storage/src/: config.rs  error.rs  health.rs  lib.rs  main.rs  membership.rs  reconciler.rs  schema_store.rs  status.rs  topic_supervisor.rs  topic_watcher.rs  topic_worker.rs  types.rs
mitiflow-storage/tests/: agent.rs  e2e_tests.rs  membership.rs  multi_topic.rs  reconciler.rs  recovery.rs  reporters.rs  topic_supervisor.rs  topic_watcher.rs  topic_worker.rs  yaml_config.rs
mitiflow-storage/tests/e2e/: helpers.rs  scenarios.rs
mitiflow-storage/tests/smoke/: helpers.rs  scenarios.rs
mitiflow-ui/: DESIGN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
mitiflow-ui/src/: App.svelte
mitiflow-ui/src/components/: ConfirmDialog.svelte  EventDetail.svelte  LagSparkline.svelte  Layout.svelte  PartitionGrid.svelte  PayloadViewer.svelte  Sidebar.svelte  StatCard.svelte  StatusBadge.svelte  TimeAgo.svelte  Toast.svelte
mitiflow-ui/src/lib/: api.test.ts  api.ts  format.test.ts  format.ts  sse.ts  (+1 more)
mitiflow/benches/: attachment.rs  checkpoint.rs  codec.rs  event.rs  gap_detector.rs  partition.rs  store.rs  watermark.rs
mitiflow/examples/: basic_pubsub.rs  consumer_groups.rs  dead_letter_queue.rs  durable_publish.rs  event_store.rs  keyed_pubsub.rs  slow_consumer_offload.rs  test_queryable.rs
mitiflow/src/: attachment.rs  codec.rs  config.rs  dlq.rs  error.rs  event.rs  lib.rs  schema.rs  types.rs
mitiflow/src/partition/: hash_ring.rs  mod.rs  rebalance.rs
mitiflow/src/publisher/: mod.rs
mitiflow/src/store/: backend.rs  lifecycle.rs  manager.rs  mod.rs  offset.rs  query.rs  runner.rs  watermark.rs
mitiflow/src/subscriber/: checkpoint.rs  consumer_group.rs  event_id_dedup.rs  forwarder.rs  gap_detector.rs  keyed_consumer.rs  mod.rs  offload.rs  pipeline.rs  recovery.rs  replay.rs
mitiflow/tests/: consumer_group_commit.rs  dedup.rs  dlq.rs  key_scoped.rs  keyed_publish.rs  offload.rs  partition.rs  recovery.rs  reliability.rs  replay.rs  schema_registry.rs  store.rs
mitiflow/tests/common/: mod.rs
(+13 files in other folders)
