[workspace]
resolver = "2"
members = ["mitiflow", "mitiflow-gateway", "mitiflow-bench", "mitiflow-orchestrator", "mitiflow-agent", "mitiflow-emulator"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Pawissanutt"]
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Zenoh
zenoh = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
postcard = { version = "1", features = ["alloc"] }

# Async runtime
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"

# Types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Channels
flume = "=0.11"

# Async utilities
tokio-util = "0.7"

# Storage
fjall = "3.1.2"

# Testing
tokio-test = "0.4"
tempfile = "3"
rand = "=0.8"

scc = "3.6"
criterion = "0.8.2"

lightbench = "0.3"

anyhow = "1"
humantime = "2"
humantime-serde = "1"
async-trait = "0.1"
clap = "4"

base64 = "0.22"
nix = "0.31"