[workspace]
resolver = "2"
members = [
    "mitiflow",
    "mitiflow-gateway",
    "mitiflow-bench",
    "mitiflow-orchestrator",
    "mitiflow-storage",
    "mitiflow-emulator",
    "mitiflow-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Pawissanutt"]
license = "Apache-2.0"
rust-version = "1.93"
repository = "https://github.com/pawissanutt/mitiflow"
homepage = "https://github.com/pawissanutt/mitiflow"
documentation = "https://docs.rs/mitiflow"

[workspace.dependencies]
mitiflow = { path = "mitiflow" }
mitiflow-storage = { path = "mitiflow-storage" }
mitiflow-orchestrator = { path = "mitiflow-orchestrator" }


# Zenoh
zenoh = "1.9"
zenoh-ext = "1.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
postcard = { version = "1", features = ["alloc"] }

# Async runtime
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"

# Types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Channels
flume = "=0.11"

# Async utilities
tokio-util = "0.7"

# Storage
fjall = "3.1"

# Testing
tokio-test = "0.4"
tempfile = "3"
rand = { version = "0.10", features = ["chacha"] }
rand_distr = "0.6"

scc = "3.6"
criterion = "0.8.2"

lightbench = "0.3"

anyhow = "1"
humantime = "2"
humantime-serde = "1"
async-trait = "0.1"
clap = "4"
serde_yaml = "0.9"
axum = "0.8"
tower = "0.5"
tower-http = "0.6"
http-body-util = "0.1"

base64 = "0.22"
nix = "0.31"
miette = "7"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
rust-embed = "8"
mime_guess = "2"
