[package]
name = "mitiflow-bench"
description = "Benchmarks for mitiflow"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mitiflow = { path = "../mitiflow", features = ["full"] }
zenoh = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "store"
harness = false
