[package]
name = "mitiflow-bench"
description = "Benchmarks for mitiflow"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
kafka = ["dep:rdkafka"]
nats = ["dep:async-nats"]
redis = ["dep:redis"]
full = ["kafka", "nats", "redis"]

[dependencies]
mitiflow = { path = "../mitiflow", features = ["full"] }
zenoh = { workspace = true }
zenoh-ext = { version = "1.8", features = ["unstable"] }
futures = "0.3"
tokio-stream = "0.1"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lightbench = { version = "0.3", features = ["clap"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"

# Optional transport dependencies
rdkafka = { version = "0.39.0", features = ["cmake-build"], optional = true }
async-nats = { version = "0.46.0", optional = true }
redis = { version = "1.0.5", features = ["tokio-comp", "streams"], optional = true }

[[bin]]
name = "bench_pubsub"
path = "src/bin/bench_pubsub.rs"

[[bin]]
name = "bench_durable"
path = "src/bin/bench_durable.rs"

[[bin]]
name = "bench_durable_pubsub"
path = "src/bin/bench_durable_pubsub.rs"

[[bin]]
name = "bench_consumer_group"
path = "src/bin/bench_consumer_group.rs"

[[bin]]
name = "bench_durable_consumer_group"
path = "src/bin/bench_durable_consumer_group.rs"
