[package]
name = "mitiflow-orchestrator"
description = "Control-plane orchestrator for mitiflow: config, lag monitoring, store lifecycle, admin API"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mitiflow = { workspace = true, features = ["full"] }
mitiflow-agent = { workspace = true }
zenoh = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fjall = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
flume = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
base64 = { workspace = true }

[features]
default = []
ui = ["dep:rust-embed", "dep:mime_guess"]

[[bin]]
name = "mitiflow-ctl"
path = "src/bin/ctl.rs"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
