[package]
name = "mitiflow-storage"
description = "Storage agent for distributed partition management in mitiflow"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mitiflow = {  workspace = true, features = ["full"] }
zenoh = { workspace = true }
tokio = { workspace = true, features = ["signal", "process"] }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
humantime-serde = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
nix = { workspace = true, features = ["signal"] }
