[package]
name = "mitiflow"
description = "Production-grade event streaming for Zenoh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["store"]
store = ["dep:fjall"]
wal = ["dep:fjall"]
full = ["store", "wal"]

[dependencies]
zenoh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
flume = { workspace = true }
tokio-util = { workspace = true }
fjall = { workspace = true, optional = true }
scc = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
criterion = { workspace=true, features = ["html_reports"] }

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "attachment"
harness = false

[[bench]]
name = "gap_detector"
harness = false

[[bench]]
name = "partition"
harness = false

[[bench]]
name = "event"
harness = false

[[bench]]
name = "store"
harness = false
required-features = ["store"]

[[bench]]
name = "watermark"
harness = false

[[bench]]
name = "checkpoint"
harness = false
required-features = ["store"]
