[package]
name = "mitiflow"
description = "Production-grade event streaming for Zenoh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["event-streaming", "zenoh", "pub-sub", "consumer-groups", "brokerless"]
categories = ["network-programming", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["store"]
store = []
fjall-backend = ["store", "dep:fjall"]
wal = ["dep:fjall"]
full = ["store", "fjall-backend", "wal"]

[dependencies]
zenoh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
flume = { workspace = true }
tokio-util = { workspace = true }
fjall = { workspace = true, optional = true }
scc = { workspace = true }
miette = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
criterion = { workspace=true, features = ["html_reports"] }

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "attachment"
harness = false

[[bench]]
name = "gap_detector"
harness = false

[[bench]]
name = "partition"
harness = false

[[bench]]
name = "event"
harness = false

[[bench]]
name = "store"
harness = false
required-features = ["fjall-backend"]

[[bench]]
name = "watermark"
harness = false

[[bench]]
name = "checkpoint"
harness = false
required-features = ["fjall-backend"]
